working for larger dataset